--- a/styles/Page.module.css
+++ b/styles/Page.module.css
@@ -10,6 +10,7 @@
 }
 .textBlock {
     width: 100%;
+    word-wrap: anywhere;
 }
 .textBig {
     font-size: 1.5rem;
